GMM_Main/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AmeriCorps NCCC Concept Paper Package</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>AmeriCorps VISTA Concept Paper Package</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Anticipated_length_of_project_months__c</fullName>
        <label>Anticipated length of project (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Pending Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_a_former_grantee_sponsor__c</fullName>
        <label>Are you a former grantee/sponsor?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_Affected_by_the_Project__c</fullName>
        <label>Areas Affected by the Project</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <defaultValue>&quot;By selecting I Agree, you certify that you agree to perform all actions and support all intentions in the Certification sections of this Concept Paper&quot;</defaultValue>
        <description>“By selecting &quot;I Agree&quot;, you certify that you agree to perform all actions and support all intentions in the Certification sections of this Concept Paper.”</description>
        <inlineHelpText>“Please read the authorization, assurances and certifications below. You must view or print the assurances/certifications before you can click on each &quot;I Agree&quot; for assurance or certification.”</inlineHelpText>
        <label>Certifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cite__c</fullName>
        <formula>Account.City1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Members_Participants__c</fullName>
        <inlineHelpText>“How many member/participants does your organization have?&quot;</inlineHelpText>
        <label>Current Members/Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disaster_Services__c</fullName>
        <label>Disaster Services</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Disaster Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAE Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAE Waiver Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Representative Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Executive Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Education</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emaile__c</fullName>
        <formula>Account.Email1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship__c</fullName>
        <label>Environmental Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness and Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Environmental Stewardship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fee_for_Service__c</fullName>
        <inlineHelpText>Have you ever had a &quot;Fee for Service&quot; arrangement with a youth or conservation corps program? “Fee for Service” is an agreement in which your org. pays fees or reimburses costs to a service program in exchange for member or team support.</inlineHelpText>
        <label>Fee for Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flexibility_of_Proposed_Dates__c</fullName>
        <label>Flexibility of Proposed Dates</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Area_and_Objectives__c</fullName>
        <label>Economic Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Opportunity Futures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Economic Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microenterprise Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Building Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Have_you_previouly_worked_with_NCCC__c</fullName>
        <inlineHelpText>If &apos;Yes&apos;, how many teams have served your organization?</inlineHelpText>
        <label>Have you previouly worked with NCCC ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity and Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Healthy Initiatives</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Housing_Arrangements__c</fullName>
        <inlineHelpText>In the event that housing is not available on the regional campus or your project is beyond a reasonable driving distance (1 hr) from your regional campus, briefly describe the housing arrangements you are exploring for the team.</inlineHelpText>
        <label>Housing Arrangements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_did_you_find_out_about_NCCC__c</fullName>
        <label>How did you find out about NCCC?</label>
        <picklist>
            <picklistValues>
                <fullName>Current NCCC Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am an NCCC Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a past NCCC Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Staff Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous NCCC Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State CNCS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission Community Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_many_teams_are_being_requested__c</fullName>
        <label>How many teams are being requested?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_AGREE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I AGREE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_comments__c</fullName>
        <label>If Other , comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_Yes_Fee_for_Service_Incorporation__c</fullName>
        <inlineHelpText>NCCC has effectively been used in past projects to augment and support existing youth corps partnerships with organizations. Please describe how your plan to utilize NCCC will incorporate your existing partnership with the &quot;Fee for Service&quot; corps.</inlineHelpText>
        <label>If &quot;Yes,&quot; Fee for Service Incorporation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_Yes_how_many_teams__c</fullName>
        <inlineHelpText>&quot;If &apos;Yes&apos;, how many teams have served your organization?&quot;</inlineHelpText>
        <label>If &quot;Yes,&quot; how many teams?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Yes_when__c</fullName>
        <inlineHelpText>If &apos;Yes&apos;, when did a team most recently work with your organization?</inlineHelpText>
        <label>If &quot;Yes,&quot; when?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_for_how_many_years__c</fullName>
        <label>If yes, for how many years?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_members_participants__c</fullName>
        <label>If yes, how many members/participants?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_please_explain__c</fullName>
        <label>If yes, please explain</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification__c</fullName>
        <label>Intermediary Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mailing_Addres__c</fullName>
        <formula>Account.Mailing_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <inlineHelpText>If different from the organization address above, please provide the primary address where the service activities will take place.</inlineHelpText>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Government</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Internal Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown designation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability__c</fullName>
        <label>Organizational Capability</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_CNCS_Resources__c</fullName>
        <inlineHelpText>“Does your organization have other CNCS resources?”</inlineHelpText>
        <label>Other CNCS Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_comments__c</fullName>
        <label>Other comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Issue_Area__c</fullName>
        <inlineHelpText>Check the box for the primary issue area that the project will address.</inlineHelpText>
        <label>Primary Issue Area</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship and Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural and Other Disasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban and Rural Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Project_Address__c</fullName>
        <inlineHelpText>If different from the organization address above, please provide the primary address where the service activities will take place.</inlineHelpText>
        <label>Primary Project Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <picklist>
            <picklistValues>
                <fullName>Project 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provide_Organization_Mission__c</fullName>
        <inlineHelpText>Provide a brief description of your organization&apos;s mission.</inlineHelpText>
        <label>Provide Organization Mission</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Activities_Description__c</fullName>
        <inlineHelpText>Provide a brief description about the service activities for which your organization is requesting an NCCC team. Please conclude your statement with the desired outcome expected from the involvement of NCCC.</inlineHelpText>
        <label>Service Activities Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>InProgress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presubmitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengthening_Communities__c</fullName>
        <label>Strengthening Communities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Target_Populations__c</fullName>
        <label>Target Populations</label>
        <picklist>
            <picklistValues>
                <fullName>Low-income Nat-Amer./Nat-AK/Pac-Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income individuals with disabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Those experiencing homelessness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income adults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income youth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income formerly incarcerated youth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income formerly incarcerated adults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income veterans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-income military families</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephonee__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veterans_and_Military_Families__c</fullName>
        <label>Veterans and Military</label>
        <picklist>
            <picklistValues>
                <fullName>Veterans and Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access and Attract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Veterans</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Weeks_for_Team_8_12_to_Complete_Projec__c</fullName>
        <inlineHelpText>How many weeks will it take a team of 8 to 12 members working full time (40-45 hours per week) to complete this project?</inlineHelpText>
        <label>Weeks for Team to Complete Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>AmeriCorps_NCCC</fullName>
        <active>true</active>
        <businessProcess>AmeriCorps NCCC Concept Paper Package</businessProcess>
        <description>AmeriCorps NCCC Concept Paper Package</description>
        <label>AmeriCorps NCCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>AmeriCorps_VISTA</fullName>
        <active>true</active>
        <businessProcess>AmeriCorps VISTA Concept Paper Package</businessProcess>
        <description>AmeriCorps VISTA Concept Paper Package</description>
        <label>AmeriCorps VISTA</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_date</fullName>
        <active>false</active>
        <errorConditionFormula>CloseDate &lt;  Proposed_Start_Date__c</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Proposed end date should be after proposed start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fee_for_Service_Incorporation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Fee_for_Service__c,&quot;yes&quot;),
LEN(If_Yes_Fee_for_Service_Incorporation__c) = 0)</errorConditionFormula>
        <errorDisplayField>If_Yes_Fee_for_Service_Incorporation__c</errorDisplayField>
        <errorMessage>Enter the value for  &quot;Fee for Service Incorporation&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_a_Record</fullName>
        <active>true</active>
        <errorConditionFormula>NOFA_RFP_Id__r.Concept_Paper_Due_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorMessage>You cannot edit the record as the Concept Paper due date is passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Teams</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Have_you_previouly_worked_with_NCCC__c, &quot;Yes&quot;),
ISBLANK( If_Yes_how_many_teams__c ))</errorConditionFormula>
        <errorDisplayField>If_Yes_how_many_teams__c</errorDisplayField>
        <errorMessage>Please enter the value for the number of teams you have served in your organization</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_CNCS_Resources_required_field</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISPICKVAL(Other_CNCS_Resources__c,&apos;Yes&apos;),
ISBLANK( If_yes_please_explain__c ))</errorConditionFormula>
        <errorDisplayField>If_yes_please_explain__c</errorDisplayField>
        <errorMessage>If Other CNCS resource then please explain</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Proposed_Start_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Proposed_Start_Date__c</errorDisplayField>
        <errorMessage>Proposed start date should be after today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_Former_member</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Are_you_a_former_grantee_sponsor__c , &apos;yes&apos;),
ISBLANK(If_yes_for_how_many_years__c),
ISBLANK(If_yes_how_many_members_participants__c))</errorConditionFormula>
        <errorDisplayField>If_yes_for_how_many_years__c</errorDisplayField>
        <errorMessage>If you are a former grantee sponsor then please enter the number of years and number of members/participants</errorMessage>
    </validationRules>
</CustomObject>